[package]
name = "limelight"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/drifting-in-space/limelight"
description = "WebGL2 wrapper with a focus on making high-performance graphics code easier to write and maintain"
license = "MIT"
readme = "README.md"
keywords = ["webgl"]

[dependencies]
bytemuck = { version = "1.7.2", features = ["derive"] }
js-sys = "0.3.55"
wasm-bindgen = "0.2.78"
web-sys = { version="0.3.55", features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Performance',
  'WebGlActiveInfo',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlVertexArrayObject',
  'WebGlUniformLocation',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'WebGlSync',
  'Window',
] }
limelight-derive = { version="0.1.0", path="./limelight-derive" }
anyhow = "1.0.48"
slice-of-array = "0.3.1"
