[package]
name = "limelight-primitives"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/drifting-in-space/limelight"
description = "2D shape primatives implemented with limelight."
license = "MIT"
readme = "README.md"
keywords = ["webgl"]

[dependencies]
limelight = {version="0.1.3", path="../limelight"}
bytemuck = "1.7.2"
palette = "0.6.0"
anyhow = "1.0.51"
