[package]
name = "limelight-transform"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/drifting-in-space/limelight"
description = "A transformation matrix helper for limelight."
license = "MIT"
readme = "README.md"
keywords = ["webgl"]

[dependencies]
limelight = {version="0.1.3", path="../limelight"}
