[package]
name = "limelight-yew"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19.3"
limelight = {path="../limelight"}
web-sys = { version="0.3.55", features=["Window", "HtmlCanvasElement"] }
wasm-bindgen = "0.2.78"
gloo-render = "0.1.0"
log = "0.4.14"
anyhow = "1.0.51"
gloo-events = "0.1.1"
