[package]
name = "pong"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.78"
web-sys = { version="0.3.55", features=["Window"] }
limelight = { path="../../limelight" }
bytemuck = "1.7.2"
limelight-yew = {path="../../yew"}
limelight-primitives = {path="../../primitives"}
yew = "0.19.3"
anyhow = "1.0.51"
wasm-logger = "0.2.0"
log = "0.4.14"
palette = "0.6.0"
