[package]
name = "limelight-example-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.74"
web-sys = { version="0.3.55", features = [
  'HtmlCanvasElement',
  'Window',
  'Document',
] }
limelight = { path="../../limelight" }
limelight-primitives = {path="../../primitives"}
limelight-transform = {path="../../transform"}
palette = { version = "0.6.0", features = ["named"] }
wasm-logger = "0.2.0"
