[package]
name = "shaderfun"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.78"
web-sys = { version="0.3.55", features = [
  'HtmlCanvasElement',
  'Window',
  'Document',
] }
limelight = { path="../../limelight" }
bytemuck = "1.7.2"
yew = "0.19.3"
limelight-yew = {path="../../yew"}
anyhow = "1.0.53"
