[package]
name = "limelight-example-snowflake"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.74"
web-sys = { version="0.3.55", features = [
  'HtmlCanvasElement',
  'Window',
  'Document',
] }
limelight = { path="../../limelight" }
limelight-primitives = {path="../../primitives"}
limelight-transform = {path="../../transform"}
palette = { version = "0.6.0", features = ["named"] }
wasm-logger = "0.2.0"
limelight-yew = {path="../../yew"}
yew = "0.19.3"
anyhow = "1.0.51"
nalgebra = "0.29.0"
rand = {version="0.8.4", default_features=false, features=["std_rng"]}
getrandom = { version = "0.2.3", features = ["js"] }
