[package]
name = "limelight-derive"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/drifting-in-space/limelight"
description = "Derive macro for limelight"
license = "MIT"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
inflections = "1.1.1"
proc-macro2 = "1.0.32"
quote = "1.0.10"
syn = { version = "1.0.81", features = ["full"] }
